@@ -1,0 +1,11 @@
+{
+  "params": {
+    "_UPDATE_JSON_DOCS": {
+      "srcField": "_src_",
+      "mapUniqueKeyOnly": true,
+      "": {
+        "v": 0
+      }
+    }
+  }
+}
