@@ -102,6 +102,9 @@ New Features
 
 * SOLR-9558: DIH TemplateTransformerto to support multivalued fields (Ted Sullivan via noble)
 
+* SOLR-9557: Every implicit requesthandler now has a default 'useParams' attribute (noble)
+
+
 Bug Fixes
 ----------------------
 
